Creación de funcionalidad de las diapositivas

--- a/constructorLMS/static/css/styles.css
+++ b/constructorLMS/static/css/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     max-height: 100vh;
     overflow: hidden;
@@ -41,38 +41,39 @@ button {
 .icono-menu {
     margin: 20px 20px;
     position: relative;
-    z-index: 10;
+    z-index: 101;
 }
 
-.icono-menu i{
+.icono-menu i {
     vertical-align: top;
     width: 40px;
     cursor: pointer;
 }
 
-.cont-menu{
+.cont-menu {
     background-color: #BEBEBE;
     box-shadow: 2px 0px 5px 2px rgb(158, 158, 158);
     width: 300px;
     height: 100vh;
     position: absolute;
+    z-index: 100 !important;
     top: 0;
     left: 0;
     transition: all .5s ease;
 }
 
 /* Estilos por agregar en JavaScript */
-.active{
+.active {
     transform: translate(-600px);
 }
 
 /* Estilos para el listado del Menú */
-.cont-menu ul button{
+.cont-menu ul button {
     padding: 50px 0px 20px 0px;
     list-style: none;
 }
 
-.cont-menu ul li{
+.cont-menu ul li {
     color: white;
     display: block;
     font-size: 25px;
@@ -81,9 +82,9 @@ button {
     cursor: pointer;
 }
 
-.cont-menu ul li:hover{
-    background-color: rgb(228,228,228);
-    color: rgb(42,42,42);
+.cont-menu ul li:hover {
+    background-color: rgb(228, 228, 228);
+    color: rgb(42, 42, 42);
 }
 
 /* Estilos para dividir las secciones de diapositivas, visor y componentes */
@@ -114,6 +115,19 @@ main .left .trash {
     margin-top: 10px;
 }
 
+#result-miniatura {
+    position: absolute;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    pointer-events: none;
+    opacity: 0.5;
+    transition: all 0.2s ease;
+}
+
+#result-miniatura:hover {
+    opacity: 1;
+}
+
 main .left ul {
     width: 100%;
     list-style: none;
@@ -127,7 +141,39 @@ main .left ul li {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
+    overflow: hidden;
+    position: relative;
 }
+
+main .left ul li .menu {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: 0;
+    background: transparent;
+    backdrop-filter: blur(3px);
+    display: flex;
+    justify-content: space-between;
+}
+
+main .left ul li .menu button {
+    width: 48%;
+    font-size: 16px;
+    border-radius: 3px;
+    padding: 2px;
+}
+
+.btnCancel {
+    background: rgb(0, 136, 255);
+    color: white;
+}
+
+.btnDelete {
+    color: red;
+    border: solid 1px red;
+}
+
 
 /* Estilos para el visor */
 main .center {
@@ -138,19 +184,64 @@ main .center {
 main .center .box-visor {
     background-color: #FFF;
     width: 100%;
-    height: 70%;
+    height: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-main .center .editor-texto { 
+#result-div {
+    width: 100%;
+    height: 90%;
+    border: 1px solid #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#result-div h1 {
+    font-size: 48px;
+    font-weight: bold;
+    margin: 0;
+    padding: 10px;
+    width: 100%;
+}
+
+#result-div h2 {
+    font-size: 36px;
+    font-weight: bold;
+    margin: 0;
+    padding: 10px;
+    width: 100%;
+}
+
+#result-div div {
+    font-size: 24px;
+    margin: 0;
+    padding: 10px;
+    width: 100%;
+    flex-grow: 1;
+}
+
+.draggable {
+    cursor: move;
+}
+
+.resizable {
+    resize: both;
+    overflow: auto;
+}
+
+main .center .editor-texto {
     background-color: #FFF;
 }
 
 /* Estilos para los componentes */
 main .right {
     background-color: #DFDFDF;
+    margin-top: 10px;
 }
 
 main .right ul {
@@ -166,6 +257,17 @@ main .right ul li {
     cursor: pointer;
 }
 
-main .right ul li:hover{
+main .right ul li:hover {
     background-color: #ccc;
+}
+
+.draggable-container {
+    min-height: 200px;
+    border: 1px solid black;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.editor {
+    display: none;
 }
