--- a/constructorLMS/templates/constructor.html
+++ b/constructorLMS/templates/constructor.html
@@ -173,7 +173,7 @@
     </main>
 
     <script src="{% static 'js/dos.js' %}"></script>
-    <script src="{% static 'js/app.js' %}"></script>
+    <script src="{% static 'js/menu.js' %}"></script>
     <script src="{% static 'js/slides.js' %}"></script>
     <script src="{% static 'js/xAPI.js' %}"></script>
 </body>
